--- a/Busy corporate.html
+++ b/Busy corporate.html
@@ -4,12 +4,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn Busy</title>
+    <title>Busy Corporate</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/leranBusy.css">
+    <link rel="stylesheet" href="css/privacy.css">
+    <link rel="stylesheet" href="css/datahosting.css">
+    <link rel="stylesheet" href="css/busysoftware.css">
+    <style>
+        .implementation {
+            width: 1200px;
+            margin-left: 119px;
+        }
+
+        #cont img {
+            margin-top: 30px;
+            width: 650px;
+            height: 450px;
+            margin-left: 355px;
+        }
+
+        nav li {
+            list-style: none;
+            display: flex;
+        }
+
+        /* call us */
+        .open-call {
+            visibility: visible;
+            top: 150%;
+            transform: translate(30%, -50%) scale(1);
+            position: absolute;
+        }
+
+        /* MORE INFO */
+        .open-info {
+            visibility: visible;
+            top: 100%;
+            transform: translate(-10%, -10%) scale(1);
+            position: absolute;
+        }
+
+        @media (max-width:600px) {
+            #cont img {
+                margin-left: 7%;
+                margin-top: -49px;
+                margin-bottom: 10px;
+                width: 511px;
+            }
+
+            .implementation {
+                /* margin-left: 45px;
+                font-size: 15px;
+                width: 530px;
+                margin-top: -1px; */
+                margin-left: 39px;
+                font-size: 15px;
+                width: 530px;
+                margin-top: 2px;
+            }
+        }
+        
+    </style>
+
 </head>
 
 <body>
@@ -48,6 +106,7 @@
         </div>
     </div>
 
+
     <!-- Logo Section -->
     <div class="logo">
         <img src="image/gbs.png" alt="" id="logo">
@@ -85,14 +144,15 @@
                                 Service
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="busysoftware.html">BUSY Software Associated Services</a></li>
+                                <li><a class="dropdown-item" href="/busysoftware.html">BUSY Software Associated
+                                        Services</a></li>
                                 <li><a class="dropdown-item" href="datahosting.html">Data Hosting</a></li>
 
 
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/learnBusy.html">Learn Busy</a>
+                            <a class="nav-link" href="learnBusy.html">Learn Busy</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contactus.html">Contact Us</a>
@@ -147,53 +207,8 @@
         </nav>
     </header>
 
-    <!-- marquee tag -->
-    <marquee behavior="scroll" direction="left">Make Yourself Instantly Employable</marquee>
 
-    <!-- Learn Busy-->
-    <h1 class="learn">Learn Busy</h1>
-
-    <h1 id="learn">Learning Videos will be added soon</h1>
-
-    <img src="image/learn-busy-img.jpg" alt="" id="learnbusy">
-
-    <!-- Contact us button -->
-
-    <button id="contactus" onclick="openpopup()">Contact Us For job</button>
-    <div class="popup" id="popup">
-        <form action="">
-            <h2>Contactus for job</h2>
-            <hr>
-            <h3>Activate dialer Mobile No :</h3>
-            <h4>9270052306</h4>
-            <hr>
-            <button onclick="closepopup()">Close</button>
-        </form>
-    </div>
-    
-    <!-- Send Resume -->
-
-    <button id="cont" onclick="openpop()">Send Resume</button>
-    <div class="pop" id="pop">
-        <form action="">
-            <h2>Upload Resume</h2>
-            <span onclick="closepop()">&times;</span>
-            <hr>
-            <input type="text" id="popname" placeholder="Name">
-            <br>
-            <input type="email" id="nam" placeholder="Email">
-            <input type="tel" id="nam" placeholder="Phone Number">
-            <br>
-            <label for="upload" id="lab">Upload Resum</label>
-            <br>
-            <input type="file" id="fliename" placeholder="Upload File">
-            <br>
-            <hr>
-            <button type="submit">Sumbit</button>
-        </form>
-    </div>
-
-    <!-- Upgrad For Software -->
+    <!--  Upgrad For Software -->
     <div id="upgrade">
         <button class="upgrade" onclick="openpo()">Upgrade for Software</button>
 
@@ -218,8 +233,73 @@
             </form>
         </div>
     </div>
+    <!-- cloud info -->
+    <div>
+        <h1 class="cloud">BUSY Software Associated Services</h1>
+    </div>
 
-    <!-- footer section -->
+    <div class="navba">
+        <a href="busysoftware.html" onclick="openPage('home')">BUSY Implementation Services</a>
+        <a href="Busy customization.html" onclick="openPage('about')">BUSY Customization</a>
+        <a href="Busy support.html" onclick="openPage('contact')">BUSY Support</a>
+        <a href="Busy corporate.html" onclick="openPage('contact')">BUSY Corporate Training</a>
+    </div>
+
+    <div id="cont">
+        <p>
+            For SMEs, we recommend to go with the Branded Software available for masses along with 24 Hrs After sales
+            service support & get it customized according to your business requirements.
+        </p>
+        <img src="image/busy-corporate-training-img.jpg" alt="" srcset="">
+    </div>
+
+
+    <!--  -->
+    <marquee behavior="" direction="left">Proper implementation will maximise the value of your software so that you can
+        quickly take advantage of the process and efficiency improvements that busy software providers.</marquee>
+
+    <p class="implementation">GBS Team can tailor its training methods as per the demands of the Corporate Companies
+        and we can customize our schedules as to your demands that arise from time to time, we always believe in making
+        business through relations hence we always try to fit our corporate training methods to basket to your budget
+        with reasonable price tags.</p>
+
+    <!-- More Info -->
+
+    <button class="more" onclick="openinfo()">More Info</button>
+    <div id="info" class="info">
+        <form action="">
+            <h3>Contact Us</h3>
+            <span onclick="closeinfo()">&times;</span>
+            <hr>
+            <input type="text" placeholder="Company Name" required>
+            <br>
+            <input type="text" placeholder="Enter Your Name" required>
+            <input type="phone" placeholder="Mobile No." required>
+            <br>
+            <input type="email" placeholder="Enter your E-mail" required>
+            <input type="text" placeholder="City" required>
+            <br>
+            <textarea name="" id="" cols="30" rows="2">Remarks</textarea>
+            <hr>
+            <a href=""><button>Sumbit</button></a>
+        </form>
+    </div>
+
+    <!-- Call us -->
+    <button class="call" onclick="opencall()">Call Us</button>
+    <div id="call" class="cal">
+        <form action="">
+            <h3>More Details</h3>
+            <span onclick="closecall()">&times;</span>
+            <hr>
+            <h4>Activate dialer Mobile No:</h4>
+            <p>9270052306</p>
+            <hr>
+            <a href="tel:9270052306"> <button>Call Now</button></a>
+        </form>
+    </div>
+
+    <!-- footer -->
     <footer>
         <div class="footer">
             <div id="footer">
@@ -241,8 +321,8 @@
             <div class="quick">
                 <h2>Quick Link</h2>
                 <ul id="useful">
-                    <li><a href="">Terms & Condition</a></li>
-                    <li><a href="Privacy.html">Privacy policy</a></li>
+                    <li><a href="term.html">Terms & Condition</a></li>
+                    <li><a href="/Privacy.html">Privacy policy</a></li>
                 </ul>
             </div>
         </div>
@@ -282,6 +362,51 @@
         <p id="copy">Copyrights © 2024 All Rights Reserved, Global Business Sloutions. Design & Developed by Rohit Yadav
         </p>
     </footer>
+
+
+    <script>
+        let info = document.getElementById('info');
+        function openinfo() {
+            info.classList.add("open-info");
+        }
+        function closeinfo() {
+            info.classList.remove("open-info");
+        }
+
+        //  CALL US
+
+        let call = document.getElementById('call');
+        function opencall() {
+            call.classList.add("open-call");
+        }
+        function closecall() {
+            call.classList.remove("open-call");
+        }
+
+        //  Nav color change
+        function changeColor(event, element) {
+            event.preventDefault(); // Prevent the default link behavior
+            var navItems = document.getElementsByClassName('nav-ite');
+
+            // Remove 'selected' class from all nav items
+            for (var i = 0; i < navItems.length; i++) {
+                navItems[i].classList.remove('selected');
+            }
+
+            // Add 'selected' class to the clicked nav item
+            element.classList.add('selected');
+        }
+
+        //card hover
+        function zoomIn() {
+            document.querySelector('.card').style.transform = 'scale(1.1)';
+        }
+
+        function zoomOut() {
+            document.querySelector('.card').style.transform = 'scale(1)';
+        }
+    </script>
+
     <script src="js/script.js"></script>
 </body>
 
