--- a/about.html
+++ b/about.html
@@ -80,11 +80,19 @@
                             <a class="nav-link" href="/about.html">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Product</a>
+                            <a class="nav-link" href="products.html">Product</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="">Service</a>
-                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              Service
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <li><a class="dropdown-item" href="busysoftware.html">BUSY Software Associated Services</a></li>
+                              <li><a class="dropdown-item" href="datahosting.html">Data Hosting</a></li>
+                            
+                             
+                            </ul>
+                          </li>
                         <li class="nav-item">
                             <a class="nav-link" href="learnBusy.html">Learn Busy</a>
                         </li>
