--- a/busysoftware.html
+++ b/busysoftware.html
@@ -4,12 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learn Busy</title>
+    <title>Busy software</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/leranBusy.css">
+    <link rel="stylesheet" href="css/privacy.css">
+    <link rel="stylesheet" href="css/datahosting.css">
+    <link rel="stylesheet" href="css/busysoftware.css">
+
+
 </head>
 
 <body>
@@ -48,6 +52,7 @@
         </div>
     </div>
 
+
     <!-- Logo Section -->
     <div class="logo">
         <img src="image/gbs.png" alt="" id="logo">
@@ -85,14 +90,15 @@
                                 Service
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="busysoftware.html">BUSY Software Associated Services</a></li>
+                                <li><a class="dropdown-item" href="/busysoftware.html">BUSY Software Associated
+                                        Services</a></li>
                                 <li><a class="dropdown-item" href="datahosting.html">Data Hosting</a></li>
 
 
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/learnBusy.html">Learn Busy</a>
+                            <a class="nav-link" href="learnBusy.html">Learn Busy</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contactus.html">Contact Us</a>
@@ -147,53 +153,8 @@
         </nav>
     </header>
 
-    <!-- marquee tag -->
-    <marquee behavior="scroll" direction="left">Make Yourself Instantly Employable</marquee>
 
-    <!-- Learn Busy-->
-    <h1 class="learn">Learn Busy</h1>
-
-    <h1 id="learn">Learning Videos will be added soon</h1>
-
-    <img src="image/learn-busy-img.jpg" alt="" id="learnbusy">
-
-    <!-- Contact us button -->
-
-    <button id="contactus" onclick="openpopup()">Contact Us For job</button>
-    <div class="popup" id="popup">
-        <form action="">
-            <h2>Contactus for job</h2>
-            <hr>
-            <h3>Activate dialer Mobile No :</h3>
-            <h4>9270052306</h4>
-            <hr>
-            <button onclick="closepopup()">Close</button>
-        </form>
-    </div>
-    
-    <!-- Send Resume -->
-
-    <button id="cont" onclick="openpop()">Send Resume</button>
-    <div class="pop" id="pop">
-        <form action="">
-            <h2>Upload Resume</h2>
-            <span onclick="closepop()">&times;</span>
-            <hr>
-            <input type="text" id="popname" placeholder="Name">
-            <br>
-            <input type="email" id="nam" placeholder="Email">
-            <input type="tel" id="nam" placeholder="Phone Number">
-            <br>
-            <label for="upload" id="lab">Upload Resum</label>
-            <br>
-            <input type="file" id="fliename" placeholder="Upload File">
-            <br>
-            <hr>
-            <button type="submit">Sumbit</button>
-        </form>
-    </div>
-
-    <!-- Upgrad For Software -->
+    <!--  Upgrad For Software -->
     <div id="upgrade">
         <button class="upgrade" onclick="openpo()">Upgrade for Software</button>
 
@@ -218,8 +179,138 @@
             </form>
         </div>
     </div>
+    <!-- cloud info -->
+    <div>
+        <h1 class="cloud">BUSY Software Associated Services</h1>
+    </div>
 
-    <!-- footer section -->
+    <div class="navba" id="navb">
+        <a href="busysoftware.html" onclick="openPage('home')">BUSY Implementation Services</a>
+        <a href="Busy customization.html" onclick="openPage('about')">BUSY Customization</a>
+        <a href="Busy support.html" onclick="openPage('contact')">BUSY Support</a>
+        <a href="Busy corporate.html" onclick="openPage('contact')">BUSY Corporate Training</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          </a>
+    </div>
+
+    <div id="cont">
+        <p>
+            <span>GBS do the more than just getting software up and running & enhance your experience by bridging the
+                gap between business and Software.</span> We have a team of in-house expert consultants available to
+            deliver and perform our software implementation services, which involves -
+        </p>
+        <img src="image/busy-service-1-1.png" alt="" srcset="">
+    </div>
+
+    <!-- Card info -->
+    <div class="c">
+        <div class="car" onmouseover="zoomIn()" onmouseout="zoomOut()">
+            <img src="image/migration.png" alt="Image" class="card-image">
+            <div class="content">
+                <h1>Data Migration</h1>
+                <p>to bring over historical data from old systems which ensures that you receive the most up-to-date
+                    information with your current Software.</p>
+            </div>
+        </div>
+        <div class="car" onmouseover="zoomIn()" onmouseout="zoomOut()">
+            <img src="image/configuration.png" alt="Image" class="card-image">
+            <div class="content">
+                <h1>Configuration</h1>
+                <p>Selecting the options that make the Software function to meet the Business needs in an efficient
+                    manner.</p>
+            </div>
+        </div>
+        <div class="car" onmouseover="zoomIn()" onmouseout="zoomOut()">
+            <img src="image/team-training.png" alt="Image" class="card-image">
+            <div class="content">
+                <h1>Team Training</h1>
+                <p>Success depends on the Team, how they adopt the new software.</p>
+            </div>
+        </div>
+        <div class="car" onmouseover="zoomIn()" onmouseout="zoomOut()">
+            <img src="image/monthly-quarterly-report.png" alt="Image" class="card-image">
+            <div class="content">
+                <h1>Monthly / Quarterly Report</h1>
+                <p>On-line Assistance to Team in generating monthly & Quarterly Report..</p>
+            </div>
+        </div>
+
+    </div>
+
+    <!--  -->
+    <p class="implementation">Implementation services are designed in such a way to cover all aspects of the Business
+        work flow into the
+        software & provide training to your employees. Please select your BUSY Edition to implement.</p>
+
+    <marquee behavior="" direction="left">Proper implementation will maximise the value of your software so that you can
+        quickly take advantage of the process and efficiency improvements that busy software providers.</marquee>
+
+
+    <!--Busy software puchase price  -->
+    <div class="plan">
+        <h1>Our Plans For Implementation & Better Understanding</h1>
+        <table>
+            <tr>
+                <th class="busy">BUSY - Basic / Blue Edition</th>
+                <th id="busy">BUSY - Saffron / Saffron Edition</th>
+                <th class="emerald">BUSY - Emerald / Emerald Edition</th>
+            </tr>
+            <tbody>
+                <tr>
+                    <td>5,999 Singal User</td>
+                    <td>6,999 Singal User</td>
+                    <td>9,999 Singal User</td>
+                </tr>
+                <tr>
+                    <td>14,999 Multi User</td>
+                    <td>17,999 Multi User</td>
+                    <td>24,999 Multi User</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+
+
+
+    <!-- More Info -->
+
+    <button class="more" onclick="openinfo()">More Info</button>
+    <div id="info" class="info">
+        <form action="">
+            <h3>Contact Us</h3>
+            <span onclick="closeinfo()">&times;</span>
+            <hr>
+            <input type="text" placeholder="Company Name" required>
+            <br>
+            <input type="text" placeholder="Enter Your Name" required>
+            <input type="phone" placeholder="Mobile No." required>
+            <br>
+            <input type="email" placeholder="Enter your E-mail" required>
+            <input type="text" placeholder="City" required>
+            <br>
+            <textarea name="" id="" cols="30" rows="2">Remarks</textarea>
+            <hr>
+            <a href=""><button>Sumbit</button></a>
+        </form>
+    </div>
+
+    <!-- Call us -->
+    <button class="call" onclick="opencall()">Call Us</button>
+    <div id="call" class="cal">
+        <form action="">
+            <h3>More Details</h3>
+            <span onclick="closecall()">&times;</span>
+            <hr>
+            <h4>Activate dialer Mobile No:</h4>
+            <p>9270052306</p>
+            <hr>
+            <a href="tel:9270052306"> <button>Call Now</button></a>
+        </form>
+    </div>
+
+    <!-- footer -->
     <footer>
         <div class="footer">
             <div id="footer">
@@ -241,8 +332,8 @@
             <div class="quick">
                 <h2>Quick Link</h2>
                 <ul id="useful">
-                    <li><a href="">Terms & Condition</a></li>
-                    <li><a href="Privacy.html">Privacy policy</a></li>
+                    <li><a href="term.html">Terms & Condition</a></li>
+                    <li><a href="/Privacy.html">Privacy policy</a></li>
                 </ul>
             </div>
         </div>
@@ -282,6 +373,50 @@
         <p id="copy">Copyrights © 2024 All Rights Reserved, Global Business Sloutions. Design & Developed by Rohit Yadav
         </p>
     </footer>
+
+
+    <script>
+
+        //resposivie navbar
+        function myFunction() {
+            var x = document.getElementById("navb");
+            if (x.className === "navba") {
+                x.className += " responsive";
+            } else {
+                x.className = "navba";
+            }
+        }
+
+
+        //more info
+        let info = document.getElementById('info');
+        function openinfo() {
+            info.classList.add("open-info");
+        }
+        function closeinfo() {
+            info.classList.remove("open-info");
+        }
+
+        //  CALL US
+
+        let call = document.getElementById('call');
+        function opencall() {
+            call.classList.add("open-call");
+        }
+        function closecall() {
+            call.classList.remove("open-call");
+        }
+
+        //card hover
+        function zoomIn() {
+            document.querySelector('.card').style.transform = 'scale(1.1)';
+        }
+
+        function zoomOut() {
+            document.querySelector('.card').style.transform = 'scale(1)';
+        }
+    </script>
+
     <script src="js/script.js"></script>
 </body>
 
